# panopto-scraper

./: Cargo.toml  README.md
src/: api.rs  custom_types.rs  delivery_info_response.rs  get_sessions_response.rs  main.rs
src/raw_types/: delivery_info_request.rs  delivery_info_response.rs  get_sessions_request.rs  get_sessions_response.rs  mod.rs
