[package]
name = "panopto-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
